WIP - adding hamilton code

--- a/simplemodel-01-hamilton.ipynb
+++ b/simplemodel-01-hamilton.ipynb
@@ -14,7 +14,9 @@
    "id": "6cfe5adc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from hamilton import driver"
+   ]
   },
   {
    "cell_type": "code",
